[tool.poetry]
name = "plisp"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]

[tool.poetry.scripts]
plisp = "plisp.cli:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
